# probprog-23-24

./: README.md
byo-ppl/: Dockerfile  README.md  byo-ppl.opam  dune-project
byo-ppl/byoppl/: basic.ml  distribution.ml  distribution.mli  dune  infer.ml
byo-ppl/examples/: coin.ml  dune  foo.ml  hmm.ml
byo-ppl/rppl/: coin.zls  dune  hmm.zls  rppl.ml
td/td-pyro/: README.md  pyro-intro-solution.ipynb  pyro-intro.ipynb
td/td-stan/: stan-intro-solution.ipynb  stan-intro.ipynb
